tests/fixtures/valid/tuple/tuple_basic.py
# Basic tuple creation and printing
t: tuple[int, int, int] = (1, 2, 3)
print(t)
# Expected output: (1, 2, 3)
