tests/fixtures/invalid/none_bitand_list.py
# Cannot bitwise AND None and List[int]
x: None = None & [1, 2, 3]
